Added new features

--- a/src/Pages/pages.css
+++ b/src/Pages/pages.css
@@ -52,7 +52,7 @@
     align-items:center;
     justify-content:space-around;
     position:absolute;
-    bottom:170px;
+    top:370px;
     width:150px;
 }
 .homebox{
